openshift/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: image-registry.openshift-image-registry.svc:5000/riyazkhan03-dev/order-service:latest
          ports:
            - containerPort: 8082
          resources:
            requests: { cpu: 100m, memory: 384Mi }
            limits: { cpu: 500m, memory: 512Mi }
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 40
            periodSeconds: 20
